tests/null_as_ptr_cast_bad.stderr
tests/null_as_ptr_cast_bad.hop:3:15: error: HOP2004: type mismatch: cannot cast null to *int
